chore: finalize CI and app updates after rebase

--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
     inputs:
       target_stage:
-        description: 'Target stage (QA, STAGING, PROD)'
+        description: 'Target stage (DEV, QA, STAGING, PROD)'
         required: true
         type: choice
-        options: [ QA, STAGING, PROD ]
+        options: [ DEV, QA, STAGING, PROD ]
       app_version:
         description: 'Optional AppTrust application version (defaults to latest)'
         required: false
@@ -52,39 +52,90 @@ jobs:
           echo "TARGET=$TARGET" >> $GITHUB_ENV
           echo "Resolved AppTrust version: $APP_VERSION"
 
-      - name: Resolve build number (image tag) from application version
+      - name: Initialize promotion context
         run: |
-          BUILD_NUMBER=$(curl -s \
-            "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/${{ env.APPLICATION_KEY }}/versions/${{ env.APP_VERSION }}" \
-            -H "Authorization: Bearer ${{ secrets.JFROG_ACCESS_TOKEN }}" -H "Content-Type: application/json" | jq -r '.sources.builds[0].number // empty')
-          if [[ -z "$BUILD_NUMBER" || "$BUILD_NUMBER" == "null" ]]; then
-            echo "Failed to resolve build number from AppTrust version" >&2; exit 1
+          set -euo pipefail
+          if [[ -n "${HTTP_DEBUG_LEVEL:-}" ]]; then :; else export HTTP_DEBUG_LEVEL=basic; fi
+          export JFROG_URL="${{ vars.JFROG_URL }}"
+          export PROJECT_KEY="${{ vars.PROJECT_KEY }}"
+          export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"
+          source .github/scripts/promote_lib.sh
+          echo "📦 Application: $APPLICATION_KEY"
+          echo "🏷️ Version: $APP_VERSION"
+          fetch_summary
+          echo "CURRENT_STAGE_BEFORE=${CURRENT_STAGE:-UNASSIGNED}" >> $GITHUB_ENV
+          echo "RELEASE_STATUS_BEFORE=${RELEASE_STATUS:-UNKNOWN}" >> $GITHUB_ENV
+          LC_FILE=$(mktemp)
+          CODE=$(curl -sS -L -o "$LC_FILE" -w "%{http_code}" "$JFROG_URL/access/api/v2/lifecycle/?project_key=$PROJECT_KEY" -H "Authorization: Bearer $JFROG_ADMIN_TOKEN" -H "Accept: application/json" || echo 000)
+          if [[ "$CODE" -lt 200 || "$CODE" -ge 300 ]]; then
+            echo "❌ Failed to fetch lifecycles list for project '$PROJECT_KEY' (HTTP $CODE)" >&2
+            print_request_debug "GET" "$JFROG_URL/access/api/v2/lifecycle/?project_key=$PROJECT_KEY"
+            cat "$LC_FILE" || true
+            rm -f "$LC_FILE"
+            exit 1
           fi
-          echo "BUILD_NUMBER=$BUILD_NUMBER" >> $GITHUB_ENV
-          echo "Resolved build number: $BUILD_NUMBER"
+          NORM_FILE=$(mktemp)
+          jq -c 'if type=="array" then . elif has("lifecycles") then .lifecycles elif has("items") then .items elif has("results") then .results elif (has("name") and has("stages")) then [.] else [] end' "$LC_FILE" > "$NORM_FILE" 2>/dev/null || printf '[]' > "$NORM_FILE"
+          rm -f "$LC_FILE"
+          LIFECYCLE_NAME="${LIFECYCLE_NAME:-bookverse-lifecycle}"
+          NAMES=$(jq -r --arg n "$LIFECYCLE_NAME" 'map(select(.name == $n)) | .[0].stages // [] | map(if type=="object" then .name else . end) | .[]' "$NORM_FILE" 2>/dev/null || true)
+          RELEASE_STAGE=$(jq -r --arg n "$LIFECYCLE_NAME" '([ .[] | select(.name == $n) | .releaseStage ] | .[0]) // empty' "$NORM_FILE" 2>/dev/null || true)
+          STAGES=()
+          while IFS= read -r orig; do [[ -z "$orig" ]] && continue; display=$(display_stage_for "$orig"); STAGES+=("$display"); done < <(printf "%s\n" "$NAMES")
+          rm -f "$NORM_FILE"
+          if [[ ${#STAGES[@]} -eq 0 ]]; then echo "ℹ️ Lifecycle '$LIFECYCLE_NAME' not found; using default stages (DEV QA STAGING PROD)" >&2; STAGES=(DEV QA STAGING PROD); fi
+          if [[ -n "$RELEASE_STAGE" ]]; then FINAL_STAGE=$(display_stage_for "$RELEASE_STAGE"); else FINAL_STAGE="${STAGES[$((${#STAGES[@]}-1))]}"; fi
+          echo "FINAL_STAGE=$FINAL_STAGE" >> $GITHUB_ENV
+          STAGES_STR="${STAGES[*]}"; echo "STAGES_STR=$STAGES_STR" >> $GITHUB_ENV
+          TS_INPUT="${{ inputs.target_stage }}"; TARGET_NAME="$TS_INPUT"; if [[ -z "$TARGET_NAME" ]]; then TARGET_NAME="$FINAL_STAGE"; fi
+          echo "TARGET_NAME=$TARGET_NAME" >> $GITHUB_ENV
+          echo "PROMOTED_STAGES=" >> $GITHUB_ENV
+          echo "DID_RELEASE=false" >> $GITHUB_ENV
 
-      - name: Verify evidence gates (presence)
+      - name: Promote from UNASSIGNED → next
+        env:
+          EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
-          echo "Verifying evidence parity (coverage + SAST on packages; SDLC on app version)"
-          # Placeholder checks: In a real setup, call AppTrust APIs to list evidence
-          # For demo, we assume presence if version exists and build number resolved
-          echo "Evidence checks passed (demo mode)"
+          set -euo pipefail
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          fetch_summary
+          if [[ -z "${CURRENT_STAGE:-}" || "$(display_stage_for "${CURRENT_STAGE}")" == "UNASSIGNED" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE}")"; fi
 
-      - name: Promote images across repositories
+      - name: Promote from DEV → next
+        env:
+          EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
         run: |
-          SRC_REPO="${{ vars.PROJECT_KEY }}-${{ env.SERVICE_NAME }}-docker-internal-local"
-          case "${{ env.TARGET }}" in
-            QA) DST_REPO="${{ vars.PROJECT_KEY }}-${{ env.SERVICE_NAME }}-docker-qa-local";;
-            STAGING) DST_REPO="${{ vars.PROJECT_KEY }}-${{ env.SERVICE_NAME }}-docker-staging-local";;
-            PROD) DST_REPO="${{ vars.PROJECT_KEY }}-${{ env.SERVICE_NAME }}-docker-prod-local";;
-          esac
+          set -euo pipefail
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          fetch_summary
+          if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "DEV" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
 
-          for IMG in recommendations-api recommendations-worker; do
-            SRC_PATH="$SRC_REPO/$IMG:${{ env.BUILD_NUMBER }}"
-            DST_PATH="$DST_REPO/$IMG:${{ env.BUILD_NUMBER }}"
-            echo "Promoting $IMG: $SRC_PATH -> $DST_PATH"
-            jf rt cp "$SRC_PATH" "$DST_PATH" || jf rt move "$SRC_PATH" "$DST_PATH" || true
-          done
+      - name: Promote from QA → next
+        env:
+          EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
+        run: |
+          set -euo pipefail
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          fetch_summary
+          if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "QA" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
+
+      - name: Promote from STAGING → next
+        env:
+          EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
+        run: |
+          set -euo pipefail
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          fetch_summary
+          if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "STAGING" ]]; then ALLOW_RELEASE=false; advance_one_step; else echo "Skipping: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
+
+      - name: Release to PROD
+        env:
+          EVIDENCE_PRIVATE_KEY: ${{ secrets.EVIDENCE_PRIVATE_KEY }}
+        run: |
+          set -euo pipefail
+          export JFROG_URL="${{ vars.JFROG_URL }}"; export PROJECT_KEY="${{ vars.PROJECT_KEY }}"; export JFROG_ADMIN_TOKEN="${{ secrets.JFROG_ACCESS_TOKEN }}"; source .github/scripts/promote_lib.sh
+          fetch_summary
+          if [[ "$(display_stage_for "${CURRENT_STAGE:-}")" == "STAGING" ]]; then ALLOW_RELEASE=true; advance_one_step; else echo "Skipping release: current stage is $(display_stage_for "${CURRENT_STAGE:-UNASSIGNED}")"; fi
 
       - name: Attach promotion evidence (application version)
         run: |
@@ -94,8 +145,7 @@ jobs:
               "targetStage": "${{ env.TARGET }}",
               "approvedBy": "${{ github.actor }}",
               "approvedAt": "$(date -u +%Y-%m-%dT%H:%M:%SZ)",
-              "changeRef": "DEMO-123",
-              "buildNumber": "${{ env.BUILD_NUMBER }}"
+              "changeRef": "DEMO-123"
             }
           }
           EOF
@@ -105,7 +155,6 @@ jobs:
 
           - Target Stage: **${{ env.TARGET }}**
           - Approved By: **${{ github.actor }}**
-          - Build Number: **${{ env.BUILD_NUMBER }}**
           - Change Ref: **DEMO-123**
           - Approved At: **$(date -u)**
           EOF
@@ -198,14 +247,8 @@ jobs:
       - name: Promotion summary
         run: |
           echo "## Promotion Summary" >> $GITHUB_STEP_SUMMARY
-          echo "Application: \
-\`${{ env.APPLICATION_KEY }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "Version: \
-\`${{ env.APP_VERSION }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "Build Number: \
-\`${{ env.BUILD_NUMBER }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "Target Stage: \
-\`${{ env.TARGET }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "Promoted images: recommendations-api, recommendations-worker" >> $GITHUB_STEP_SUMMARY
+          echo "Application: ${{ env.APPLICATION_KEY }}" >> $GITHUB_STEP_SUMMARY
+          echo "Version: ${{ env.APP_VERSION }}" >> $GITHUB_STEP_SUMMARY
+          echo "Target Stage: ${{ env.TARGET }}" >> $GITHUB_STEP_SUMMARY
 
 
