--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -533,18 +533,23 @@ jobs:
           EOF
           )
 
-          # Create the application version using JFrog CLI (OIDC context)
-          RESP_BODY=$(jf rt curl -sS -X POST \
-            "/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" \
+          # Create the application version with status/body capture (admin token)
+          RESP_FILE=$(mktemp)
+          HTTP_STATUS=$(curl -sS -L -o "$RESP_FILE" -w "%{http_code}" -X POST \
+            "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" \
+            -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
             -H "X-JFrog-Project: ${{ vars.PROJECT_KEY }}" \
             -H "Content-Type: application/json" \
             -H "Accept: application/json" \
             -d "$APP_VERSION_PAYLOAD")
-          echo "📨 Response Body:"; echo "$RESP_BODY" | sed -e 's/.*/&/'
-          if ! echo "$RESP_BODY" | grep -q '"version"'; then
+          echo "🔢 HTTP Status: $HTTP_STATUS"
+          echo "📨 Response Body:"; cat "$RESP_FILE"; echo
+          if [[ "$HTTP_STATUS" -lt 200 || "$HTTP_STATUS" -ge 300 ]]; then
             echo "❌ Failed to create application version" >&2
+            rm -f "$RESP_FILE"
             exit 1
           fi
+          rm -f "$RESP_FILE"
 
           echo "✅ Application version created: $APPLICATION_KEY@$APP_VERSION"
           echo "📦 Packages will be automatically bound from build sources"
