--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -545,9 +545,20 @@ jobs:
           echo "🔢 HTTP Status: $HTTP_STATUS"
           echo "📨 Response Body:"; cat "$RESP_FILE"; echo
           if [[ "$HTTP_STATUS" -lt 200 || "$HTTP_STATUS" -ge 300 ]]; then
-            echo "❌ Failed to create application version" >&2
-            rm -f "$RESP_FILE"
-            exit 1
+            echo "⚠️ Create version failed (HTTP $HTTP_STATUS). Checking if version already exists..."
+            EXIST_STATUS=$(curl -sS -o /dev/null -w "%{http_code}" -L \
+              "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/$APP_VERSION" \
+              -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
+              -H "X-JFrog-Project: ${{ vars.PROJECT_KEY }}" \
+              -H "Accept: application/json")
+            echo "🔎 Exists check HTTP: $EXIST_STATUS"
+            if [[ "$EXIST_STATUS" == "200" ]]; then
+              echo "✅ Version already exists: $APPLICATION_KEY@$APP_VERSION — proceeding"
+            else
+              echo "❌ Failed to create application version and not found via exists check" >&2
+              rm -f "$RESP_FILE"
+              exit 1
+            fi
           fi
           rm -f "$RESP_FILE"
 
