--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,8 +118,8 @@ jobs:
         env:
           JF_URL: ${{ vars.JFROG_URL }}
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
-          JFROG_CLI_BUILD_NAME: ${{ steps.finalize-build-info.outputs.build_name }}
-          JFROG_CLI_BUILD_NUMBER: ${{ steps.finalize-build-info.outputs.build_number }}
+          JFROG_CLI_BUILD_NAME: ${{ steps.set-build-info.outputs.build_name }}
+          JFROG_CLI_BUILD_NUMBER: ${{ steps.set-build-info.outputs.build_number }}
         with:
           version: latest
           oidc-provider-name: github-bookverse-recommendations
@@ -463,8 +463,8 @@ jobs:
         env:
           JF_URL: ${{ vars.JFROG_URL }}
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
-          JFROG_CLI_BUILD_NAME: ${{ needs.build-test-publish.outputs.build_name }}
-          JFROG_CLI_BUILD_NUMBER: ${{ needs.build-test-publish.outputs.build_number }}
+          JFROG_CLI_BUILD_NAME: ${{ github.event.repository.name }}_${{ github.workflow }}_${{ github.job }}
+          JFROG_CLI_BUILD_NUMBER: ${{ github.run_number }}
         with:
           version: latest
           oidc-provider-name: github-bookverse-recommendations
@@ -538,7 +538,6 @@ jobs:
           HTTP_STATUS=$(curl -sS -L -o "$RESP_FILE" -w "%{http_code}" -X POST \
             "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" \
             -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
-            -H "X-JFrog-Project: ${{ vars.PROJECT_KEY }}" \
             -H "Content-Type: application/json" \
             -H "Accept: application/json" \
             -d "$APP_VERSION_PAYLOAD")
@@ -549,7 +548,6 @@ jobs:
             EXIST_STATUS=$(curl -sS -o /dev/null -w "%{http_code}" -L \
               "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/$APP_VERSION" \
               -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
-              -H "X-JFrog-Project: ${{ vars.PROJECT_KEY }}" \
               -H "Accept: application/json")
             echo "🔎 Exists check HTTP: $EXIST_STATUS"
             if [[ "$EXIST_STATUS" == "200" ]]; then
