ci(recommendations): switch application version curl to OIDC (comment old token) (#4)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -643,14 +643,34 @@ jobs:
               echo "-----------------------"
             }
           fi
-          echo "🔗 Curl (sanitized): curl -X POST '${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false' -H 'Authorization: Bearer ***' -H 'Content-Type: application/json' -H 'Accept: application/json' -d '<payload>'"
-          DEBUG_INCLUDE_PROJECT_HEADER=false print_request_debug "POST" "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" "<payload>"
+          DEBUG_INCLUDE_PROJECT_HEADER=false print_request_debug "POST" "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" "$APP_VERSION_PAYLOAD"
 
-          # Create the application version with status/body capture (align with inventory: use admin token via curl)
+          # Create the application version with status/body capture (testing OIDC instead of admin token)
           RESP_BODY=$(mktemp)
+          # OLD (commented for testing): use static admin token
+          # HTTP_STATUS=$(curl -sS -L -o "$RESP_BODY" -w "%{http_code}" -X POST \
+          #   "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" \
+          #   -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
+          #   -H "Content-Type: application/json" \
+          #   -H "Accept: application/json" \
+          #   -d "$APP_VERSION_PAYLOAD")
+
+          # NEW: Acquire short-lived JFrog access token via GitHub OIDC and use it
+          OIDC_AUDIENCE="${{ vars.JFROG_OIDC_AUDIENCE }}"
+          OIDC_PROVIDER="${{ vars.JFROG_OIDC_PROVIDER }}"
+          : "${OIDC_AUDIENCE:=jfrog-github}"
+          : "${OIDC_PROVIDER:=github-bookverse-recommendations}"
+          OIDC_ID_TOKEN=$(curl -sS -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=${OIDC_AUDIENCE}" | jq -r '.value')
+          EXCHANGE_REQ=$(jq -n \
+            --arg provider "$OIDC_PROVIDER" \
+            --arg subject "$OIDC_ID_TOKEN" \
+            '{providerName:$provider,subjectToken:$subject,grantType:"urn:ietf:params:oauth:grant-type:token-exchange",subjectTokenType:"urn:ietf:params:oauth:token-type:id_token",requestedTokenType:"urn:ietf:params:oauth:token-type:access_token"}')
+          ACCESS_TOKEN=$(curl -sS -X POST "${{ vars.JFROG_URL }}/access/api/v1/oidc/token" \
+            -H "Content-Type: application/json" -d "$EXCHANGE_REQ" | jq -r '.access_token')
           HTTP_STATUS=$(curl -sS -L -o "$RESP_BODY" -w "%{http_code}" -X POST \
             "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" \
-            -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
+            -H "Authorization: Bearer $ACCESS_TOKEN" \
             -H "Content-Type: application/json" \
             -H "Accept: application/json" \
             -d "$APP_VERSION_PAYLOAD")
