--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,21 @@ jobs:
           # Also useful for services using LOG_LEVEL env
           echo "LOG_LEVEL=DEBUG" >> $GITHUB_ENV
 
+      - name: Configure HTTP debug verbosity
+        run: |
+          # HTTP_DEBUG_LEVEL: none|basic|verbose (default basic)
+          case "${HTTP_DEBUG_LEVEL:-}" in
+            none|basic|verbose)
+              echo "HTTP_DEBUG_LEVEL=${HTTP_DEBUG_LEVEL}" >> $GITHUB_ENV ;;
+            *)
+              # If DEMO_MODE is on, keep verbose, else default basic
+              if [[ "${{ inputs.DEMO_MODE }}" == "true" || "${DEMO_MODE:-}" == "true" ]]; then
+                echo "HTTP_DEBUG_LEVEL=verbose" >> $GITHUB_ENV
+              else
+                echo "HTTP_DEBUG_LEVEL=basic" >> $GITHUB_ENV
+              fi ;;
+          esac
+
       - name: Display manual trigger info
         run: |
           echo "🚀 Manual CI trigger initiated"
@@ -525,6 +540,8 @@ jobs:
 
       - name: Create application version
         run: |
+          # Ensure no shell xtrace is leaking or causing unintended masking
+          set +x || true
           echo "🚀 Creating AppTrust application version: $APP_VERSION"
 
           # Determine application version tag - simulate real development environment
@@ -575,20 +592,10 @@ jobs:
           EOF
           )
 
-          # Debug: show sanitized curl and payload (only token is masked)
+          # Debug: show request context and payload (only tokens are redacted)
           echo "📦 Application Key: $APPLICATION_KEY"
           echo "📝 Payload:"; echo "$APP_VERSION_PAYLOAD" | jq . || echo "$APP_VERSION_PAYLOAD"
-          # Source shared helper if available, with a robust fallback definition
-          if [ -f .github/scripts/http_debug.sh ]; then source .github/scripts/http_debug.sh; fi
-          URL="${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false"
-          if declare -f emit_curl_copy >/dev/null 2>&1; then
-            echo "🔗 Curl (copy/paste-ready):"
-            emit_curl_copy POST "$URL" "token" "$APP_VERSION_PAYLOAD"
-          else
-            SANITIZED_PAYLOAD=$(echo "$APP_VERSION_PAYLOAD" | jq -c 2>/dev/null || printf "%s" "$APP_VERSION_PAYLOAD")
-            echo "🔗 Curl (copy/paste-ready):"
-            echo "curl -X POST \"$URL\" -H 'Authorization: Bearer <REPLACE_WITH_ACCESS_TOKEN>' -H 'Content-Type: application/json' -H 'Accept: application/json' --data-raw '$SANITIZED_PAYLOAD'"
-          fi
+          # Use a local debug helper that only redacts Authorization tokens
           if ! declare -f print_request_debug >/dev/null 2>&1; then
             print_request_debug() {
               local method="$1"; local url="$2"; local body="${3:-}"; local level="${HTTP_DEBUG_LEVEL:-basic}"
@@ -623,7 +630,7 @@ jobs:
               echo "-----------------------"
             }
           fi
-          DEBUG_INCLUDE_PROJECT_HEADER=false print_request_debug "POST" "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" "$APP_VERSION_PAYLOAD"
+          DEBUG_INCLUDE_PROJECT_HEADER=false print_request_debug "POST" "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions?async=false" "$APP_VERSION_PAYLOAD"
 
           # Create the application version with status/body capture (testing OIDC instead of admin token)
           RESP_BODY=$(mktemp)
@@ -635,22 +642,10 @@ jobs:
           #   -H "Accept: application/json" \
           #   -d "$APP_VERSION_PAYLOAD")
 
-          # NEW: Acquire short-lived JFrog access token via GitHub OIDC and use it
-          OIDC_AUDIENCE="${{ vars.JFROG_OIDC_AUDIENCE }}"
-          OIDC_PROVIDER="${{ vars.JFROG_OIDC_PROVIDER }}"
-          : "${OIDC_AUDIENCE:=jfrog-github}"
-          : "${OIDC_PROVIDER:=github-bookverse-recommendations}"
-          OIDC_ID_TOKEN=$(curl -sS -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=${OIDC_AUDIENCE}" | jq -r '.value')
-          EXCHANGE_REQ=$(jq -n \
-            --arg provider "$OIDC_PROVIDER" \
-            --arg subject "$OIDC_ID_TOKEN" \
-            '{providerName:$provider,subjectToken:$subject,grantType:"urn:ietf:params:oauth:grant-type:token-exchange",subjectTokenType:"urn:ietf:params:oauth:token-type:id_token",requestedTokenType:"urn:ietf:params:oauth:token-type:access_token"}')
-          ACCESS_TOKEN=$(curl -sS -X POST "${{ vars.JFROG_URL }}/access/api/v1/oidc/token" \
-            -H "Content-Type: application/json" -d "$EXCHANGE_REQ" | jq -r '.access_token')
+          # Use admin token for AppTrust call (consistent with inventory/checkout)
           HTTP_STATUS=$(curl -sS -L -o "$RESP_BODY" -w "%{http_code}" -X POST \
-            "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions/?async=false" \
-            -H "Authorization: Bearer $ACCESS_TOKEN" \
+            "${{ vars.JFROG_URL }}/apptrust/api/v1/applications/$APPLICATION_KEY/versions?async=false" \
+            -H "Authorization: Bearer ${{ secrets.JFROG_ADMIN_TOKEN }}" \
             -H "Content-Type: application/json" \
             -H "Accept: application/json" \
             -d "$APP_VERSION_PAYLOAD")
