--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -56,9 +56,9 @@ jobs:
           JF_PROJECT: ${{ vars.PROJECT_KEY }}
         with:
           version: latest
-          oidc-provider-name: github-bookverse-recommendations
+          oidc-provider-name: bookverse-recommendations-github
           disable-job-summary: false
-          oidc-audience: jfrog-github
+          oidc-audience: ${{ vars.JFROG_URL }}
 
       - name: Configure JFrog CLI (admin)
         run: |
